--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 </head>
 <body>
   <section class="w3-container">
-   <h1>Links to Monreal'a work</h1>
+   <h1>Links to Kiko Monreal's work</h1>
    <h2>My First Exercise</h2>
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
+      <li><a href="./public/Q1_1NGCsMonreal.html"> First Non-Graded Exercise </a> </li>
     </ul>
    </nav>
   </section>
