--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
       <li><a href="./public/Q1_1NGCsMonreal.html"> First Non-Graded Exercise </a> </li>
       <li><a href="./public/Q12GCesiumMonreal.html"> Second Graded Exercise </a> </li> 
+      <li><a href="./public/Q13GCesiumMonreal.html"> Third Graded Exercise </a> </li>
     </ul>
    </nav>
   </section>
